Revert "Fix accordion layout and align icons"

--- a/desk.css
+++ b/desk.css
@@ -1332,12 +1332,11 @@ section {
 }
 
 .accordion-title {
-  width: 100%;
+  width: auto;
   background: transparent;
   color: inherit;
   border: none;
   padding: 10px 20px;
-  padding-right: 40px;
   cursor: pointer;
   position: relative;           /* para poder posicionar el "+" */
   font-size: 1rem;              /* mismo tamaño que el texto */
@@ -1422,7 +1421,7 @@ section {
 }
 
 #terapia-financiera .tf-row2 {
-  grid-template-columns: 1fr;
+  grid-template-columns: 35% 65%;
 }
 
 #terapia-financiera .tf-si,
@@ -1430,7 +1429,8 @@ section {
   padding: 1rem;
 }
 
-#terapia-financiera .tf-sd {
+#terapia-financiera .tf-sd,
+#terapia-financiera .tf-ii {
   padding: 0;
 }
 
@@ -1439,6 +1439,10 @@ section {
   color: var(--blanco);
 }
 
+#terapia-financiera .tf-ii {
+  background-color: var(--azul-medianoche);
+  color: var(--blanco);
+}
 #terapia-financiera .section-title {
   font-size: 2rem;
   font-weight: 600;
